--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -108,6 +108,7 @@
                 font-size: 16px;
                 letter-spacing: 1px;
                 font-weight: 700;
+                cursor: pointer;
             }
         }
     }
