--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,28 @@
 @import '../../App.scss';
 
 .home {
+    .header {
+        position: fixed;
+        z-index: 2;
+    }
 
+    .home-body {
+        display: flex;
+        flex-direction: row;
+
+        .sidebar-container {
+            height: calc(100vh - 70px);
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            z-index: 2;
+        }
+
+        .main-container {
+            width : 100%;
+            margin: 70px 0 0 300px;
+            height: 150vh;
+            padding: 2rem;
+        }
+    }
 }
