--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -91,17 +91,11 @@
                     height: 40px;
                     overflow: hidden;
                     border-radius: 50%;
-                    background: lighten($primary-accent-color, 15);
                     display: flex;
                     align-items: center;
                     justify-content: center;
 
-                    span {
-                        font-size: 1.6rem;
-                        font-weight: 700;
-                    }
-
-                    image {
+                    img {
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
