--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -13,14 +13,13 @@
         background-size: cover;
         position: relative;
 
-        &:after {
-            content: '';
+        .background-overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(#000, 0.3);
+            background-color: rgba(#000, 0.6);
         }
     }
 
@@ -28,88 +27,141 @@
         position: absolute;
         left: 0;
         top: 0;
-        width: 500px;
+        width: 400px;
         height: 100%;
-        background: rgba(#fff, 0.6);
+        background: #fff;
 
-        .form-title {
-            height: 150px;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            h1 {
-                font-size: 2.5rem;
-                font-weight: 700;
-                letter-spacing: 1px;
-            }
-        }
-
-        .form {
+        .form{
             display: flex;
             flex-direction: column;
             width: 70%;
             margin: 0 auto;
 
-            .name-inputs {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-            }
 
-            .form-input {
-                display: flex;
-                flex-direction: column;
+            .form-title {
+                height: 250px;
                 width: 100%;
-
-                h4 {
-                    font-size: 14px;
-                    margin-bottom: 4px;
-                    color: #111;
-                }
-
-                input {
-                    font-size: 14px;
-                    padding: 0.6rem 0.5rem;
-                    margin-bottom: 16px;
-                    outline: none;
-                }
-
-            }
-
-            .submit-btn {
-                margin-top: 20px;
-
-                .btn {
-                    width: 100%;
-                    height: 40px;
-                    background-color: #e2792e;
-                    font-size: 1.2rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+    
+                h1 {
+                    font-size: 2.5rem;
                     font-weight: 700;
-                    text-transform: uppercase;
+                    letter-spacing: 1px;
                 }
             }
+
+            .form-body{
+                display : flex;
+                flex-direction: column;
+            
+                    .name-inputs {
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                    }
+            
+                    .form-input {
+                        display: flex;
+                        flex-direction: column;
+                        width: 100%;
+
+                        &.nameInput{
+                            width : 50%;
+                        }
+            
+                        h4 {
+                            font-size: 14px;
+                            margin-bottom: 4px;
+                            color: #111;
+                        }
+            
+                        input {
+                            font-size: 14px;
+                            padding: 0.6rem 0.5rem;
+                            margin-bottom: 16px;
+                            outline: none;
+                        }
+            
+                    }
+            
+                    .submit-btn {
+                        margin-top: 20px;
+            
+                        .btn {
+                            width: 100%;
+                            height: 40px;
+                            background-color: $primary-accent-color;
+                            font-size: 1.2rem;
+                            font-weight: 700;
+                            text-transform: uppercase;
+                        }
+                    }
+            
+                
+            
+                .switch-form {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin-top: 5px;
+            
+                    button {
+                        background: none;
+                        outline: none;
+                        border: none;
+                        color: rgb(0, 81, 255);
+                        text-decoration : underline;
+                        font-size: 16px;
+                        letter-spacing: 1px;
+                        font-weight: 700;
+                        cursor: pointer;
+                    }
+                }
+            }
+
 
         }
 
-        .switch-form {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 5px;
 
-            button {
-                background: none;
-                outline: none;
-                border: none;
-                color: rgb(17, 32, 245);
-                font-size: 16px;
-                letter-spacing: 1px;
-                font-weight: 700;
-                cursor: pointer;
+    }
+
+    .slogan-side {
+        position: absolute;
+        width: calc(100% - 400px);
+        height: 100%;
+        right: 0;
+        top: 0;
+        padding: 3rem;
+
+        .title {
+            h1 {
+                color: lighten($primary-accent-color, 10);
+                font-size: 4.5rem;
+                letter-spacing: 2px;
+
             }
+        }
+
+        .slogan-typo {
+            width:450px;
+            color : white;
+            letter-spacing: 2px;
+            line-height : 5.5rem;
+            margin : 100px auto;
+
+            h4{
+                font-size : 3.5rem;
+            }
+
+            span{
+                font-size : 2rem;
+                font-weight: 400;
+            }
+            
+
         }
     }
 }
