--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,42 +34,42 @@
             }
         }
 
-        .search-section {
-            .search-bar {
-                background-color: $secondary-bg-color;
-                display: flex;
-                align-items: center;
-                padding: 7px 10px;
-                border-radius: 10px;
+        // .search-section {
+        //     .search-bar {
+        //         background-color: $secondary-bg-color;
+        //         display: flex;
+        //         align-items: center;
+        //         padding: 7px 10px;
+        //         border-radius: 10px;
 
-                input {
-                    margin-left: 15px;
-                    background: none;
-                    border: none;
-                    padding: 0;
-                    width: 350px;
-                }
+        //         input {
+        //             margin-left: 15px;
+        //             background: none;
+        //             border: none;
+        //             padding: 0;
+        //             width: 350px;
+        //         }
 
-                button {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 50%;
-                    transition: all 0.2s ease-out;
+        //         button {
+        //             display: flex;
+        //             align-items: center;
+        //             justify-content: center;
+        //             width: 30px;
+        //             height: 30px;
+        //             border-radius: 50%;
+        //             transition: all 0.2s ease-out;
 
-                    &:hover {
-                        background: #cccccc;
-                    }
+        //             &:hover {
+        //                 background: #cccccc;
+        //             }
 
-                    .icon {
-                        width: 15px;
-                        height: 15px;
-                    }
-                }
-            }
-        }
+        //             .icon {
+        //                 width: 15px;
+        //                 height: 15px;
+        //             }
+        //         }
+        //     }
+        // }
 
         .profile-section {
             .profile-bar {
@@ -77,13 +77,11 @@
                 flex-direction: row;
                 align-items: center;
                 padding: 0.4rem 0.8rem;
-                border-radius: 25px;
 
 
                 h4 {
                     font-size: 1.2rem;
                     letter-spacing: 1px;
-                    margin-left: 20px;
                 }
 
                 .profile-image {
@@ -94,6 +92,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    margin-left : 20px;
 
                     img {
                         width: 100%;
@@ -102,29 +101,35 @@
                         object-position: center;
                     }
 
-                    margin-left : 20px;
                 }
+                
+            }
+        }
 
-                button {
-                    width: 40px;
-                    height: 40px;
-                    border-radius: 50%;
-                    transition: all 0.2s ease-out;
-                    cursor: pointer;
-                    margin-left: 20px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
+        .menu-btn{
+            display : none;
+        }
+    }
+}
 
-                    &:hover {
-                        background: $secondary-bg-color;
 
-                    }
+@media screen and (max-width : 800px){
+    .header{
 
-                    .icon {
-                        width: 25px;
 
-                    }
+        .container{
+
+            .profile-section{
+                display : none;   
+                
+            }
+
+            .menu-btn{
+                display : block;
+
+                .icon{
+                    width : 25px;
+                    height : 25px;
                 }
             }
         }
