--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -36,17 +36,39 @@
             flex-direction: column;
             width: 70%;
             margin: 0 auto;
+            height : 100%;
 
+            .logo {
+                display : flex;
+                flex-direction: row;
+                align-items: center;
+                height : 100px;
+                margin-top : 30px;
+                width : 100%;
+                justify-content: center;
+
+                .icon{
+                    margin-right : 20px;
+                    fill : $secondary-accent-color;
+                }
+                h1 {
+                    color: black;
+                    font-size: 3rem;
+                    letter-spacing: 2px;
+    
+                }
+            }
 
             .form-title {
-                height: 250px;
+                height: 60px;
                 width: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                margin-bottom: 30px;
     
                 h1 {
-                    font-size: 2.5rem;
+                    font-size: 1.5rem;
                     font-weight: 700;
                     letter-spacing: 1px;
                 }
@@ -79,9 +101,9 @@
             
                         input {
                             font-size: 14px;
-                            padding: 0.6rem 0.5rem;
-                            margin-bottom: 16px;
-                            outline: none;
+                            padding: 0.4rem ;
+                            margin-bottom: 14px;
+                            // outline: none;
                         }
             
                     }
@@ -110,7 +132,7 @@
             
                     button {
                         background: none;
-                        outline: none;
+                        // outline: none;
                         border: none;
                         color: rgb(0, 81, 255);
                         text-decoration : underline;
@@ -122,9 +144,7 @@
                 }
             }
 
-
         }
-
 
     }
 
@@ -135,22 +155,15 @@
         right: 0;
         top: 0;
         padding: 3rem;
-
-        .title {
-            h1 {
-                color: lighten($primary-accent-color, 10);
-                font-size: 4.5rem;
-                letter-spacing: 2px;
-
-            }
-        }
+        display : flex;
+        align-items : center;
+        justify-content: center;  
 
         .slogan-typo {
-            width:450px;
-            color : white;
+            width: 450px;
+            color : $primary-accent-color;
             letter-spacing: 2px;
             line-height : 5.5rem;
-            margin : 100px auto;
 
             h4{
                 font-size : 3.5rem;
@@ -159,8 +172,116 @@
             span{
                 font-size : 2rem;
                 font-weight: 400;
+                color : white;
             }
             
+        }
+    }
+}
+
+@media screen and(max-width : 900px){
+    .auth {
+
+        .form-section {
+            width: 300px;
+    
+            .form{
+                width: 80%;
+    
+                .form-body{             
+
+                
+                        .form-input {
+ 
+                            h4 {
+                                font-size: 12px;
+                            }
+                
+                            input {
+                                font-size: 14px;
+                                padding: 0.4rem 0.4rem;
+
+                            }
+                
+                        }
+                
+                        .submit-btn {
+                            margin-top: 15px;
+                
+                            .btn {
+                                height: 30px;
+                            }
+                        }
+                
+                }
+            }
+    
+    
+        }
+    
+        .slogan-side {
+            width: calc(100% - 300px);
+    
+            .slogan-typo {
+                width: 350px;
+                letter-spacing: 2px;
+                line-height : 5rem;
+    
+                h4{
+                    font-size : 2.5rem;
+                }
+    
+                span{
+                    font-size : 1.8rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and(max-width : 687px){
+    .auth {
+
+
+        .form-section {
+            top : 50%;
+            left : 50%;
+            transform : translate(-50%, -50%);
+            height : 500px;
+
+    
+            .form{
+                .logo {   
+                    height : 60px;
+                    margin-top : 30px;
+    
+                    .icon{
+                        margin-right : 20px;
+                        fill : $secondary-accent-color;
+                        width : 30px;
+                        height : 30px;
+                    }
+                    h1 {
+                        color: black;
+                        font-size: 2.4rem;
+                        letter-spacing: 2px;
+        
+                    }
+                }
+
+                .form-title {
+                    height: 40px;
+                    margin-bottom: 20px;
+        
+                    h1 {
+                        font-size: 1.2rem;
+                    }
+                }
+            }
+        }
+    
+        .slogan-side {
+            display : none;
 
         }
     }
