--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@
     box-shadow: 0 0 2px;
 
     .container {
-        padding: 0 70px;
+        padding: 0 50px;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -92,7 +92,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    margin-left : 20px;
+                    margin-left: 20px;
 
                     img {
                         width: 100%;
@@ -102,34 +102,34 @@
                     }
 
                 }
-                
+
             }
         }
 
-        .menu-btn{
-            display : none;
+        .menu-btn {
+            display: none;
         }
     }
 }
 
 
-@media screen and (max-width : 800px){
-    .header{
+@media screen and (max-width : 800px) {
+    .header {
 
 
-        .container{
+        .container {
+            padding : 0 30px;
+            .profile-section {
+                display: none;
 
-            .profile-section{
-                display : none;   
-                
             }
 
-            .menu-btn{
-                display : block;
-
-                .icon{
-                    width : 25px;
-                    height : 25px;
+            .menu-btn {
+                display: block;
+                cursor: pointer;
+                .icon {
+                    width: 20px;
+                    height: 20px;
                 }
             }
         }
