--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -72,3 +72,20 @@
         }
     }
 }
+
+@media screen and (max-width : 500px){
+    .profile{
+
+        .info-section{
+    
+            .info{
+                h6{
+                    font-size : 0.8rem;
+                }
+                h2{
+                    font-size : 1.2rem;
+                }
+            }
+        }
+    }
+}
