--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -11,7 +11,7 @@
         align-items: center;
         width : 100%;
         margin-top : 30px;
-        padding : 10px 0 10px 70px;
+        padding : 10px 0 10px 50px;
         border-radius: 0 30px 30px 0;
         transition : all 0.2s ease-out;
         cursor: pointer;
@@ -40,6 +40,18 @@
         cursor: default;
         &:hover{
             background : rgba($primary-accent-color, 0.3);
+        }
+    }
+}
+
+
+
+@media screen and (max-width : 800px){
+    .sidebar{
+        width: 250px;
+        .tab{
+            padding : 10px 0 10px 30px;
+
         }
     }
 }
