--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,7 @@
 @import '../../App.scss';
 
 .home {
+
     .header {
         position: fixed;
         z-index: 2;
@@ -11,6 +12,7 @@
         flex-direction: row;
 
         .sidebar-container {
+            transition: all 0.2s linear;
             height: calc(100vh - 70px);
             position: fixed;
             left: 0;
@@ -19,9 +21,57 @@
         }
 
         .main-container {
-            width : calc(100% - 350px);
+            transition: all 0.2s linear;
+            width: calc(100% - 350px);
             margin: 70px 0 0 auto;
-            padding: 2rem;
+            padding: 30px;
+
         }
     }
+
+    
+}
+
+@media screen and (max-width : 800px){
+    
+    .home {
+    
+        .home-body {
+            .sidebar-container {
+                left: -300px;
+                bottom: 0;
+                z-index: 2;
+            }
+    
+            .main-container {
+                width: 100%;
+            }
+        }
+    
+        .sidebar-opened{
+            .sidebar-container{
+                left : 0;
+                background: #fff;
+            }
+
+            .main-container{
+                pointer-events: none;
+                position: relative;
+                min-height : calc(100vh - 70px);
+
+                &::after{
+                    content : '';
+                    position : absolute;
+                    top : 0;
+                    left : 0;
+                    width : 100%;
+                    height : 100%;
+                    background : rgba(#000, 0.2);
+
+                }
+            }
+        }
+        
+    }
+
 }
