--- a/src/App.scss
+++ b/src/App.scss
@@ -275,6 +275,7 @@ textarea {
         padding: 10px;
         background-color: lighten($secondary-bg-color, 5);
         border-radius: 10px;
+        margin : 0 30px;
 
         &::after {
             display: none;
