--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,4 @@
-$primary-bg-color : #fefefe;
-$secondary-bg-color : #eaeaea;
-$contrasting-color : #111111;
-$primary-accent-color : #94e6bb;
-$secondary-accent-color : #ee9b00;
-$note-accent-color : #e9c80c;
+@import 'vars';
 
 
 * {
@@ -23,7 +18,6 @@ body {
 
 button {
     background: none;
-    // outline: none;
     border: none;
     cursor: pointer;
     transition: 0.1s all ease-out;
@@ -36,17 +30,18 @@ button {
 input[type=text],
 textarea {
     padding: 0.4rem 0.6rem;
-    // outline: none;
     font-size: 1rem;
 }
 
 
 .icon {
-    width: 40px;
-    height: 40px;
+    width: 24px;
+    height: 24px;
     fill: $contrasting-color;
 }
-
+.logo-icon{
+    width : 30px;
+}
 .items-container {
     margin-top: 30px;
     display: grid;
