--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -73,7 +73,7 @@
     }
 }
 
-@media screen and (max-width : 500px){
+@media screen and (max-width : $xSmallScreen){
     .profile{
 
         .info-section{
