Adding Style variables and handling various responsive sizes to auth page

--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -1,19 +1,20 @@
 
 //* Colors
+$logo-color : #f3a310;
 $primary-bg-color : #fefefe;
 $secondary-bg-color : #f1f1f1;
 $contrasting-color : #111111;
 $primary-accent-color : #94e6bb;
-$secondary-accent-color : #ee9b00;
+$secondary-accent-color : #146fc5;
 $note-accent-color : #e9c80c;
 
 
 //* Breakpoints
 $xLargeScreen : 1600px;
-$largeScreen : 1280px;
+$largeScreen : 1366px;
 $mediumScreen : 1024px;
 $smallScreen : 768px;
-$xSmallScreen : 640px;
+$xSmallScreen : 560px;
 
 //* Sizes
 $headerHeight : 70px;
