--- a/src/App.scss
+++ b/src/App.scss
@@ -39,9 +39,28 @@ textarea {
     height: 24px;
     fill: $contrasting-color;
 }
-.logo-icon{
-    width : 30px;
+
+.logo-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    .logo-icon {
+        margin-right: 15px;
+        width : 40px;
+        height : 40px;
+        fill: $logo-color;
+    }
+
+    h2 {
+        color: black;
+        font-size: 2rem;
+        letter-spacing: 2px;
+
+    }
 }
+
 .items-container {
     margin-top: 30px;
     display: grid;
@@ -196,7 +215,7 @@ textarea {
             opacity: 0;
             transition: all 0.2s ease-out;
             width: 100%;
-            padding : 10px;
+            padding: 10px;
             height: 50px;
             pointer-events: none;
 
@@ -270,7 +289,7 @@ textarea {
         padding: 10px;
         background-color: lighten($secondary-bg-color, 5);
         border-radius: 10px;
-        margin : 0 30px;
+        margin: 0 30px;
 
         &::after {
             display: none;
