--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -27,96 +27,85 @@
         position: absolute;
         left: 0;
         top: 0;
-        width: 400px;
+        width: 40%;
         height: 100%;
         background: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        .form{
+
+        .form-container {
             display: flex;
             flex-direction: column;
             width: 80%;
-            margin: 0 auto;
-            height : 100%;
+            height: 80%;
+            margin: auto;
 
-            .logo {
-                display : flex;
-                flex-direction: row;
-                align-items: center;
-                height : 100px;
-                margin-top : 30px;
-                width : 100%;
-                justify-content: center;
-
-                .icon{
-                    margin-right : 20px;
-                    fill : $secondary-accent-color;
-                }
-                h1 {
-                    color: black;
-                    font-size: 3rem;
-                    letter-spacing: 2px;
-    
-                }
+            .logo-section {
+                height: 10%;
             }
 
-            .form-body{
-                display : flex;
+            .form-body {
+                display: flex;
                 flex-direction: column;
-            
-                    .name-inputs {
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: space-between;
-                    }
-            
-                    .form-input {
-                        display: flex;
-                        flex-direction: column;
-                        width: 100%;
+                margin: auto 0;
+                height: auto;
 
-                        &.nameInput{
-                            width : 50%;
-                        }
-            
-                        h4 {
-                            font-size: 14px;
-                            margin-bottom: 4px;
-                            color: #111;
-                        }
-            
-                        input {
-                            font-size: 14px;
-                            padding: 0.4rem ;
-                            margin-bottom: 14px;
-                            background : lighten($secondary-bg-color, 3);
-                            border : 1px solid darken($secondary-bg-color, 20);
-                        }
-            
+                .name-inputs {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                }
+
+                .form-input {
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+
+                    &.nameInput {
+                        width: 50%;
                     }
-            
-                    .submit-btn {
-                        margin-top: 20px;
-            
-                        .btn {
-                            width: 100%;
-                            height: 35px;
-                            background-color: $primary-accent-color;
-                            font-size: 1rem;
-                            font-weight: 700;
-                            letter-spacing: 1px;
-                        }
+
+                    h4 {
+                        font-size: 14px;
+                        margin-bottom: 4px;
+                        color: #111;
                     }
-            
-                
-            
+
+                    input {
+                        font-size: 14px;
+                        padding: 0.7rem 0.4rem;
+                        margin-bottom: 14px;
+                        background: lighten($secondary-bg-color, 3);
+                        border: 1px solid darken($secondary-bg-color, 20);
+                    }
+
+                }
+
+                .submit-btn {
+                    margin-top: 20px;
+
+                    .btn {
+                        width: 100%;
+                        height: 35px;
+                        background-color: $primary-accent-color;
+                        font-size: 1rem;
+                        font-weight: 700;
+                        letter-spacing: 1px;
+                    }
+                }
+
+
+
                 .switch-btn {
-                    width : 100%;
-                    
+                    width: 100%;
+
                     button {
-                        margin-top : 20px;
-                        width : 100%;
-                        height : 35px;
-                        background:darken($secondary-bg-color, 5);
+                        margin-top: 20px;
+                        width: 100%;
+                        height: 35px;
+                        background: darken($secondary-bg-color, 5);
                         border: none;
                         font-size: 0.8rem;
                         letter-spacing: 1px;
@@ -132,126 +121,116 @@
 
     .slogan-side {
         position: absolute;
-        width: calc(100% - 400px);
+        width: 60%;
         height: 100%;
         right: 0;
         top: 0;
         padding: 3rem;
-        display : flex;
-        align-items : center;
-        justify-content: center;  
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         .slogan-typo {
             width: 450px;
-            color : $primary-accent-color;
+            color: $primary-accent-color;
             letter-spacing: 2px;
-            line-height : 5.5rem;
+            line-height: 5.5rem;
 
-            h4{
-                font-size : 3.5rem;
+            h4 {
+                font-size: 3.5rem;
             }
 
-            span{
-                font-size : 2rem;
+            span {
+                font-size: 2rem;
                 font-weight: 400;
-                color : white;
+                color: white;
             }
-            
+
         }
     }
 }
 
-@media screen and(max-width : $mediumScreen){
+@media screen and(max-width : $mediumScreen) {
     .auth {
 
         .form-section {
-            width: 350px;
-    
-            .form{
-    
-                .logo {
-    
-                    .icon{
-                        margin-right : 16px;
-                        width : 30px;
-                    }
-                    h1 {
-                        font-size: 2rem;        
-                    }
-                }
 
-                .form-body{             
+            .form {
 
-                
-                        .form-input {
- 
-                            h4 {
-                                font-size: 12px;
-                            }
-                
-                            input {
-                                font-size: 14px;
-                                padding: 0.4rem 0.4rem;
 
-                            }
-                
+
+                .form-body {
+
+
+                    .form-input {
+
+                        h4 {
+                            font-size: 12px;
                         }
-                
-                        .submit-btn {
-                            margin-top: 15px;
-                
-                            .btn {
-                                height: 30px;
-                            }
+
+                        input {
+                            font-size: 14px;
+                            padding: 0.4rem 0.4rem;
+
                         }
-                
+
+                    }
+
+                    .submit-btn {
+                        margin-top: 15px;
+
+                        .btn {
+                            height: 30px;
+                        }
+                    }
+
                 }
             }
-    
-    
+
+
         }
-    
+
         .slogan-side {
-            width: calc(100% - 350px);
-    
+
             .slogan-typo {
                 width: 350px;
                 letter-spacing: 2px;
-                line-height : 5rem;
-    
-                h4{
-                    font-size : 2.5rem;
+                line-height: 5rem;
+
+                h4 {
+                    font-size: 2.5rem;
                 }
-    
-                span{
-                    font-size : 1.8rem;
+
+                span {
+                    font-size: 1.8rem;
                 }
             }
         }
     }
 }
 
-@media screen and(max-width : $smallScreen){
+@media screen and(max-width : $smallScreen) {
     .auth {
-
-
         .form-section {
-            top : 50%;
-            left : 50%;
-            transform : translate(-50%, -50%);
-            height : 500px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            height: 800px;
+            width: 70%;
+        }
 
-    
-            .form{
-                .logo {   
-                    height : 60px;
-                    margin-bottom : 10px;
-                 }
-            }
-        }
-    
         .slogan-side {
-            display : none;
+            display: none;
         }
+    }
+}
+
+@media screen and(max-width : $xSmallScreen) {
+    .auth {
+        .form-section {
+            height: 100%;
+            width: 100%;
+        }
+
     }
 }
